<resources>
    <string name="app_name">Activity Tracker</string>
    <string name="act">Активность</string>
    <string name="mine">Моя</string>
    <string name="users">Пользователей</string>
    <string name="profile">Профиль</string>
    <string name="intro_main">Пожалуй лучший\nфитнесс трекер в ДВФУ</string>
    <string name="intro_sub">Созданный студентами\nмагистратуры</string>
    <string name="btn_reg">Зарегистрироваться</string>
    <string name="btn_log">Уже есть аккаунт?</string>
    <string name="btn_con">Продолжить</string>
    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="password2_hint">Повторите пароль</string>
    <string name="name_hint">Имя</string>
    <string name="sex_hint">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="comment">Комментарий</string>
    <string name="agreement">
        Нажимая на кнопку, вы соглашаетесь с политикой
        конфиденциальности и обработки персональных данных, а также принимаете
        пользовательское соглашение
    </string>
    <string name="btn_back_description">Назад</string>
    <string name="btn_del_description">Удалить</string>
    <string name="btn_share_description">Поделиться</string>
    <string name="btn_new_active">Начать новую активность</string>
    <string name="btn_pause_description">Пауза</string>
    <string name="btn_finish_description">Финиш</string>
    <string name="save">Сохранить</string>
    <string name="change_password">Изменить пароль</string>
    <string name="exit">Выйти</string>
    <string name="password_old">Старый пароль</string>
    <string name="password_new">Новый пароль</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="confirm">Принять</string>
    <string name="begin_question">Начнём?</string>
    <string name="begin">Начать</string>
</resources>